<resources>
    <string name="app_name">LaundryQ</string>
    <string name="hint_email_nomor_telepon">Email</string>
    <string name="hint_password">Kata sandi</string>
    <string name="txt_lupa_password">Lupa <b>Password?</b></string>
    <string name="btn_login_txt">Masuk</string>
    <string name="tv_no_account">Belum memiliki akun?</string>
    <string name="txt_daftar">Daftar</string>
    <string name="contdesc_logo_laundryq">Logo LaundryQ</string>
    <string name="hint_name">Nama Lengkap</string>
    <string name="hint_notlp">Nomor Telepon</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="btn_daftar_txt">Daftar</string>
    <string name="txt_have_account">Sudah punya akun?</string>
    <string name="txt_header_register">Registrasi LaundryQ</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_order_title">Order</string>
    <string name="menu_profile_title">Profile</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_help">Help</string>
    <string name="btn_set_location_txt">Set Location</string>
    <string name="hint_alamat_lengkap">Alamat Lengkap</string>
    <string name="hint_alamat_detail">No. Rumah / Nama Gang</string>
    <string name="btn_simpan_title">Simpan</string>
    <string name="activity_map_title">Alamat Rumah</string>
    <string name="menu_title_search_location">Search Location</string>
    <string name="menu_title_edit">Edit</string>
    <string name="txt_change_phone_number">Ubah nomor telepon</string>
    <string name="activity_phone_number_title">Ubah Nomor Telepon</string>
    <string name="txt_edit">EDIT</string>
    <string name="txt_edit_nama">Edit Nama</string>
    <string name="txt_simpan">Simpan</string>
    <string name="activity_edit_profile_title">Edit Profile</string>
    <string name="txt_no_address">Alamat belum diatur</string>
    <string name="txt_change_password">Ubah password</string>
    <string name="activity_change_password_title">Ubah Password</string>
    <string name="activity_change_name_title">Ubah Nama</string>
    <string name="hint_last_password">Kata sandi lama</string>
    <string name="txt_change_email">Ubah alamat email</string>
    <string name="activity_change_email_title">Ubah Email</string>
    <string name="txt_filter_by_category">Filter by category</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_sort">Urutkan</string>
    <string name="txt_like">Suka</string>
    <string name="menu_title_pakaian">Pakaian</string>
    <string name="menu_title_sepatu">Sepatu</string>
    <string name="menu_title_jas">Jas</string>
    <string name="menu_title_boneka">Boneka</string>
    <string name="menu_title_bed_cover">Bed Cover</string>
    <string name="menu_title_terdekat">Terdekat</string>
    <string name="menu_title_harga_terendah">Harga Terendah</string>
    <string name="menu_title_harga_tertinggi">Harga Tertinggi</string>
    <string name="txt_address">Alamat</string>
    <string name="txt_contact">Kontak</string>
    <string name="txt_jadwal_laundry">Jadwal Laundry</string>
    <string name="txt_book">Pesan</string>
    <string name="activity_order_title">Pesan</string>
    <string name="btn_title_wash">Cuci</string>
    <string name="txt_note_order"><![CDATA[Berikut jenis cucian yang dapat diterima oleh <b>%1s</b>.
        <br> Silahkan pilih jenis barang yang akan kamu cuci kemudian klik tombol <b>CUCI</b>.
        Masukkan perkiraan total berat (KG) / jumlah barang (SET) cucian kamu.]]>
    </string>
    <string name="txt_information">Informasi</string>
    <string name="txt_total">Total</string>
    <string name="btn_title_next">Lanjut</string>
    <string name="txt_perkiraan">(Perkiraan)</string>
    <string name="hint_detail_address">Detail Alamat (Optional)</string>
    <string name="txt_pickup">Pengambilan</string>
    <string name="hint_date_pick">Tanggal Pengambilan</string>
    <string name="hint_date_delivery">Tanggal Pengiriman</string>
    <string name="txt_delivery">Pengiriman</string>
    <string name="hint_time_pick">Jam Pengambilan</string>
    <string name="hint_time_delivery">Jam Pengiriman</string>

    <string name="txt_laundry">Cucian Anda</string>
    <string name="txt_pickup_address">Alamat Pengambilan</string>
    <string name="txt_delivery_address">Alamat Pengiriman</string>
    <string name="txt_time_pickup">Waktu Pengambilan</string>
    <string name="txt_time_delivery">Waktu Pengiriman</string>
    <string name="txt_date_order">Tanggal Order</string>
    <string name="txt_order_id">Order ID</string>
    <string name="txt_date_finish">Tanggal Selesai</string>
    <string name="txt_date_pick">Tanggal pengambilan</string>
    <string name="txt_date_delivery">Tanggal pengiriman</string>
    <string name="txt_laundry_list">Daftar Cucian</string>
    <string name="activity_detail_order_title">Rincian Pesanan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_default_address">Alamat Default</string>
    <string name="txt_choose_location">Pilih Lokasi</string>
    <string name="txt_admin_cost">Biaya admin</string>
    <string name="txt_laundry_cost">Biaya cucian</string>
    <string name="btn_title_accept">Terima</string>
</resources>
