<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneNumberActivity">

    <include
        layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:padding="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_change_phone_number"
            android:textSize="22sp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/et_no_tlp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notlp"
            android:inputType="number"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/btn_simpan_title"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btn_transparant_effect"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</RelativeLayout>