<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.order.TimePickFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delivery_motorbike"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pickup"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_date_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_date_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_pick"
            android:background="@drawable/et_shape_background_gray"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_time_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_time_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time_pick"
            android:background="@drawable/et_shape_background_gray"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delivery_truck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_delivery"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_date_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_date_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date_delivery"
            android:gravity="center"
            android:background="@drawable/et_shape_background_gray"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_time_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_time_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time_delivery"
            android:background="@drawable/et_shape_background_gray"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>