<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrasi LaundryQ"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:padding="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorBlack"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:background="@drawable/et_shape_background_gray"
                    android:drawableLeft="@drawable/baseline_person_black_24"
                    android:drawableStart="@drawable/baseline_person_black_24"
                    android:drawablePadding="16dp"
                    android:inputType="text"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_no_tlp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_no_tlp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_notlp"
                    android:background="@drawable/et_shape_background_gray"
                    android:drawableLeft="@drawable/baseline_local_phone_black_24"
                    android:drawableStart="@drawable/baseline_local_phone_black_24"
                    android:drawablePadding="16dp"
                    android:inputType="number"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:background="@drawable/et_shape_background_gray"
                    android:drawableLeft="@drawable/baseline_email_black_24"
                    android:drawableStart="@drawable/baseline_email_black_24"
                    android:drawablePadding="16dp"
                    android:inputType="textEmailAddress"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_passwod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:background="@drawable/et_shape_background_gray"
                    android:drawableLeft="@drawable/baseline_lock_black_24"
                    android:drawableStart="@drawable/baseline_lock_black_24"
                    android:drawablePadding="16dp"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_confirm_passwod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:background="@drawable/et_shape_background_gray"
                    android:drawableLeft="@drawable/baseline_lock_black_24"
                    android:drawableStart="@drawable/baseline_lock_black_24"
                    android:drawablePadding="16dp"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/btn_daftar_txt"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:textAllCaps="false"
                android:background="@drawable/btn_transparant_stroke_black"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sudah punya akun?"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/btn_transparant_stroke_black"
                android:text="@string/btn_login_txt"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>